--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node bin/www"
+    "start": "gulp serve",
+    "postinstall": "bower install"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
