--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postinstall": "bower install"
   },
   "dependencies": {
+    "bluebird": "^3.3.3",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -14,6 +15,8 @@
     "ejs": "2.3.3",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0",
+    "tiny-uuid4": "^1.0.1"
     "pg" : "4.x",
     "serve-favicon": "~2.3.0"
   },
