--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "tiny-uuid4": "^1.0.1"
+    "tiny-uuid4": "^1.0.1",
     "pg" : "4.x",
     "serve-favicon": "~2.3.0"
   },
