--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "gulp serve",
-    "postinstall": "bower install"
+    "postinstall": "bower install --config.interactive=false && gulp build"
   },
   "engines": {
     "node": "5.7.0"
