--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
     "ejs": "2.3.3",
+    "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "tiny-uuid4": "^1.0.1",
-    "pg" : "4.x",
-    "serve-favicon": "~2.3.0"
+    "pg": "4.x",
+    "serve-favicon": "~2.3.0",
+    "tiny-uuid4": "^1.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
