--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "bootstrap": "~3.3.5",
     "modernizr": "~2.8.1",
     "angular": "~1.5.0",
-    "angular-route": "^1.5.0"
+    "angular-route": "^1.5.0",
+    "angular-sanitize": "^1.5.0"
   },
   "overrides": {
     "bootstrap": {
