--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "modernizr": "~2.8.1",
     "angular": "~1.5.0",
     "angular-route": "^1.5.0",
-    "angular-sanitize": "^1.5.0"
+    "angular-sanitize": "^1.5.0",
+    "lodash": "^4.5.1"
   },
   "overrides": {
     "bootstrap": {
