--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular": "~1.5.0",
     "angular-route": "^1.5.0",
     "angular-sanitize": "^1.5.0",
-    "lodash": "^4.5.1"
+    "lodash": "^4.5.1",
+    "angular-resource": "^1.5.0"
   },
   "overrides": {
     "bootstrap": {
