--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": "5.7.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.2.39",
     "bluebird": "^3.3.3",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
