--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^3.0.0",
+    "http-proxy-middleware": "^0.11.0",
     "main-bower-files": "^2.5.0",
     "supervisor": "0.9.1",
     "wiredep": "^2.2.2"
