--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,9 @@
     "angular-sanitize": "^1.5.0",
     "lodash": "^4.5.1",
     "jquery": "^2.2.1",
-    "angular-resource": "^1.5.0"
+    "angular-resource": "^1.5.0",
+    "angular-animate": "^1.5.0",
+    "angular-bootstrap": "^1.2.1"
   },
   "overrides": {
     "bootstrap": {
